--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: python
 python:
     - "2.7"
     - "3.5"
-
+install:
+    - pip install coverage
 script:
-    make test
+    - make test
+    - make coverage
