--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: python
 python:
     - "2.7"
     - "3.5"
+before_install:
+    - sudo add-apt-repository -y ppa:mc3man/trusty-media
+    - sudo apt-get update -qq
+    - sudo apt-get install ffmpeg
 install:
     - pip install coverage
 script:
