--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: python
 python:
     - "2.7"
     - "3.5"
+    - "3.6"
+    - "pypy"
+    - "pypy3"
 before_install:
     - sudo add-apt-repository -y ppa:mc3man/trusty-media
     - sudo apt-get update -qq
