--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,8 +3,10 @@ environment:
   matrix:
     - PYTHON: "C:\\Python27"
     - PYTHON: "C:\\Python35"
+    - PYTHON: "C:\\Python36"
     - PYTHON: "C:\\Python27-x64"
     - PYTHON: "C:\\Python35-x64"
+    - PYTHON: "C:\\Python36-x64"
 
 install:
    - curl -kLO https://ffmpeg.zeranoe.com/builds/win32/static/ffmpeg-3.4-win32-static.zip
