--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,21 @@
 language: python
-python:
-  - "2.7"
-  - "3.5"
-  - "3.6"
-  - "pypy"
-  - "pypy3"
+matrix:
+  include:
+    - python: 2.7
+      dist: xenial
+    - python: 3.5
+      dist: xenial
+    - python: 3.6
+      dist: xenial
+    - python: 3.7
+      dist: xenial
+    - python: pypy
+      dist: xenial
+    - python: pypy3
+      dist: xenial
+
 before_install:
-  - sudo add-apt-repository -y ppa:mc3man/trusty-media
+  - sudo add-apt-repository -y ppa:jonathonf/ffmpeg-4
   - sudo apt-get update -qq
   - sudo apt-get install ffmpeg
 install:
