add python37 to appveyor

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,9 +4,11 @@ environment:
     - PYTHON: "C:\\Python27"
     - PYTHON: "C:\\Python35"
     - PYTHON: "C:\\Python36"
+    - PYTHON: "C:\\Python37"
     - PYTHON: "C:\\Python27-x64"
     - PYTHON: "C:\\Python35-x64"
     - PYTHON: "C:\\Python36-x64"
+    - PYTHON: "C:\\Python37-x64"
 
 install:
    - curl -kLO https://ffmpeg.zeranoe.com/builds/win32/static/ffmpeg-3.4-win32-static.zip
