ignore .idea files

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,8 @@ docs/source/api/*
 
 # vim
 *.swp
+.idea/inspectionProfiles/profiles_settings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/pyaaf2.iml
+.idea/vcs.xml
