AMA linking refactored and test (#67)
* Update ama.py

* Update ama.py

More refactoring

* Update ama.py

* Update ama.py

* Update ama.py

* Update ama.py

* Fixed old typo, seeking through chunks may be silently broken

* Update ama.py

Textual reformat

* Update ama.py

* Update .gitignore

* Fixed this code so this branch works again

* in progress

* Added WAV link tests, and fixed a bug

* Added WAV link tests from other branch

* In progress

* Gobs of test implementation

* renamed WAV test case

* ignore .idea files

* Update ama.py

added name parameter

* Discovered a bug in ama

* Code style stuff

* Code style stuff

* Tweaked this test to make it pass python2

* Logic implementation

* rewrote these methods to call the new logic

* Fixed some bugs I created in the merge

* Wow all the tests pass

* Cleaned up code and some other things, tests work

* Removed some dead code

* Update ama.py

removed `file` import

* Update ama.py

Removed unnecessary imports

* Implemented AIFC AMA Linking

Added essence descriptor etc.

* add locotors to video and pcm descriptors

* fix avc ama linking for MC

* assert descriptor has locators

* Delete .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 *.py[cod]
 
+.idea/*
+
 # C extensions
 *.so
 
@@ -45,3 +47,8 @@ docs/source/api/*
 
 # vim
 *.swp
+.idea/inspectionProfiles/profiles_settings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/pyaaf2.iml
+.idea/vcs.xml
