--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -10,8 +10,39 @@ on:
     branches: [ "master", "dev" ]
 
 jobs:
-  build-test:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
+
+    - name: Install pypa-build
+      run: python -m pip install build
+
+    - name: Create wheel and sdist
+      run: python -m build -s -w --outdir dist .
+
+    - name: Upload sdist
+      uses: actions/upload-artifact@v3
+      with:
+        name: sdist
+        path: dist/*.tar.gz
+
+    - name: Upload wheel
+      uses: actions/upload-artifact@v3
+      with:
+        name: wheel
+        path: dist/*.whl
+
+  test:
     runs-on: ${{ matrix.os }}
+    needs: build
+
     strategy:
       fail-fast: false
       matrix:
@@ -20,38 +51,42 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
 
     - name: Setup FFmpeg
       uses: FedericoCarboni/setup-ffmpeg@v1.1.0
 
+    - name: Download wheel
+      uses: actions/download-artifact@v3
+      with:
+        name: wheel
+        path: dist
+
     - name: Run Unit Tests
+      shell: bash
       run: |
+        python -m pip install dist/*
         python -m unittest discover tests -v
 
   latest-release:
-    needs: build-test
+    needs: test
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Set up Python
-        uses: actions/setup-python@v3
-        with:
-          python-version: "3.10"
-
-      - name: Create sdist
-        run: |
-          python setup.py sdist
-
-      - name: Create Artifact sdist
-        uses: actions/upload-artifact@v3
+      - name: Download sdist
+        uses: actions/download-artifact@v3
         with:
           name: sdist
-          path: dist/*.tar.gz
+          path: dist
+
+      - name: Download wheel
+        uses: actions/download-artifact@v3
+        with:
+          name: wheel
+          path: dist
 
       - uses: "marvinpinto/action-automatic-releases@latest"
         if: ${{ github.ref == 'refs/heads/master' }}
@@ -62,3 +97,4 @@ jobs:
           title: "Development Build"
           files: |
             dist/*.tar.gz
+            dist/*.whl
