--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -45,8 +45,8 @@ jobs:
       if: startsWith(github.ref, 'refs/tags/')
       with:
         files: |
+          dist/*.whl
           dist/*.tar.gz
-
 
     - name: Publish distribution 📦 to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
