--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -5,9 +5,9 @@ name: Python CI
 
 on:
   push:
-    branches: [ "master", "dev" ]
+    branches: [ "main", "dev" ]
   pull_request:
-    branches: [ "master", "dev" ]
+    branches: [ "main", "dev" ]
 
 jobs:
   build:
@@ -89,7 +89,7 @@ jobs:
           path: dist
 
       - uses: "marvinpinto/action-automatic-releases@latest"
-        if: ${{ github.ref == 'refs/heads/master' }}
+        if: ${{ github.ref == 'refs/heads/main' }}
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           automatic_release_tag: "latest"
